--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,21 +5,28 @@ name: Go Test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22.5'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.22.5"
 
-    - name: Test
-      run: go test -v ./...
+      - name: Test
+        run: go test -race -covermode atomic -coverprofile=covprofile -v ./...
+
+      - name: Install goveralls
+        run: go install github.com/mattn/goveralls@latest
+
+      - name: Send coverage
+        env:
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN  }}
+        run: goveralls -coverprofile=covprofile -service=github
